Missed dkmNonceTypes required under scheme descriptions

--- a/artifacts/acvp_sub_kas_ffc.html
+++ b/artifacts/acvp_sub_kas_ffc.html
@@ -960,7 +960,7 @@
 <li>dhHybridOneFlow</li>
 <li>MQV1</li>
 <li>dhOneFlow - Can only provide unilateral key confirmation party V to party U.</li>
-<li>dhStatic</li>
+<li>dhStatic - requires dkmNonceTypes</li>
 </ul>
 
 <p> </p>
