KAS/KTS-IFC KeyNonce Generation requirements per scheme

--- a/artifacts/acvp_sub_kas_ifc.html
+++ b/artifacts/acvp_sub_kas_ifc.html
@@ -1932,6 +1932,384 @@
 <h1 id="rfc.section.4">
 <a href="#rfc.section.4">4.</a> <a href="#generation_reqs_per_scheme" id="generation_reqs_per_scheme">Generation requirements per party per scheme</a>
 </h1>
+<p id="rfc.section.4.p.1">The various schemes of KAS/KTS all have their own requirements as to keys and nonces per scheme, per party. The below table demonstrates those generation requirements:</p>
+<div id="rfc.table.14"></div>
+<div id="scheme_generation_requirements"></div>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+<caption>Required Party Generation Obligations</caption>
+<thead><tr>
+<th class="left">Scheme</th>
+<th class="left">KasMode</th>
+<th class="left">KasRole</th>
+<th class="left">KeyConfirmationRole</th>
+<th class="left">KeyConfirmationDirection</th>
+<th class="left">KeyPair</th>
+<th class="left">Nonce</th>
+<th class="left">Generates Ciphertext</th>
+</tr></thead>
+<tbody>
+<tr>
+<td class="left">KAS1-basic</td>
+<td class="left">KdfNoKc</td>
+<td class="left">InitiatorPartyU</td>
+<td class="left">None</td>
+<td class="left">None</td>
+<td class="left">False</td>
+<td class="left">False</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS1-basic</td>
+<td class="left">KdfNoKc</td>
+<td class="left">ResponderPartyV</td>
+<td class="left">None</td>
+<td class="left">None</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">False</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS1-Party_V-confirmation</td>
+<td class="left">KdfKc</td>
+<td class="left">InitiatorPartyU</td>
+<td class="left">Recipient</td>
+<td class="left">Unilateral</td>
+<td class="left">False</td>
+<td class="left">False</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS1-Party_V-confirmation</td>
+<td class="left">KdfKc</td>
+<td class="left">ResponderPartyV</td>
+<td class="left">Provider</td>
+<td class="left">Unilateral</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">False</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS2-basic</td>
+<td class="left">KdfNoKc</td>
+<td class="left">InitiatorPartyU</td>
+<td class="left">None</td>
+<td class="left">None</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS2-basic</td>
+<td class="left">KdfNoKc</td>
+<td class="left">ResponderPartyV</td>
+<td class="left">None</td>
+<td class="left">None</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS2-bilateral-confirmation</td>
+<td class="left">KdfKc</td>
+<td class="left">InitiatorPartyU</td>
+<td class="left">Recipient</td>
+<td class="left">Bilateral</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS1-bilateral-confirmation</td>
+<td class="left">KdfKc</td>
+<td class="left">ResponderPartyV</td>
+<td class="left">Provider</td>
+<td class="left">Bilateral</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS2-bilateral-confirmation</td>
+<td class="left">KdfKc</td>
+<td class="left">InitiatorPartyU</td>
+<td class="left">Provider</td>
+<td class="left">Bilateral</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS1-bilateral-confirmation</td>
+<td class="left">KdfKc</td>
+<td class="left">ResponderPartyV</td>
+<td class="left">Recipient</td>
+<td class="left">Bilateral</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS2-Party_U-confirmation</td>
+<td class="left">KdfKc</td>
+<td class="left">InitiatorPartyU</td>
+<td class="left">Provider</td>
+<td class="left">Unilateral</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS2-Party_U-confirmation</td>
+<td class="left">KdfKc</td>
+<td class="left">ResponderPartyV</td>
+<td class="left">Recipient</td>
+<td class="left">Unilateral</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS2-Party_V-confirmation</td>
+<td class="left">KdfKc</td>
+<td class="left">InitiatorPartyU</td>
+<td class="left">Recipient</td>
+<td class="left">Unilateral</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KAS2-Party_V-confirmation</td>
+<td class="left">KdfKc</td>
+<td class="left">ResponderPartyV</td>
+<td class="left">Provider</td>
+<td class="left">Unilateral</td>
+<td class="left">True</td>
+<td class="left">True</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KTS-OAEP-basic</td>
+<td class="left">NoKdfNoKc</td>
+<td class="left">InitiatorPartyU</td>
+<td class="left">None</td>
+<td class="left">None</td>
+<td class="left">False</td>
+<td class="left">False</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KTS-OAEP-basic</td>
+<td class="left">NoKdfKc</td>
+<td class="left">ResponderPartyV</td>
+<td class="left">None</td>
+<td class="left">None</td>
+<td class="left">True</td>
+<td class="left">False</td>
+<td class="left">False</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KTS-OAEP-Party_V-confirmation</td>
+<td class="left">NoKdfKc</td>
+<td class="left">InitiatorPartyU</td>
+<td class="left">Recipient</td>
+<td class="left">Unilateral</td>
+<td class="left">False</td>
+<td class="left">False</td>
+<td class="left">True</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">KTS-OAEP-Party_V-confirmation</td>
+<td class="left">NoKdfKc</td>
+<td class="left">ResponderPartyV</td>
+<td class="left">Provider</td>
+<td class="left">Unilateral</td>
+<td class="left">True</td>
+<td class="left">False</td>
+<td class="left">False</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+</tbody>
+</table>
 <h1 id="rfc.section.5">
 <a href="#rfc.section.5">5.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a>
 </h1>
