KAS-IFC Adds supportedLengths property to match SP800-108 registration.

--- a/artifacts/acvp_sub_kas_ifc.html
+++ b/artifacts/acvp_sub_kas_ifc.html
@@ -1380,6 +1380,20 @@
 <td class="left"></td>
 </tr>
 <tr>
+<td class="left">supportedLengths</td>
+<td class="left">The supported derivation lengths.</td>
+<td class="left">Domain.</td>
+<td class="left">Single range (or literal) expected.  Registered value must support the L value provided.</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
 <td class="left">supportsEmptyIv</td>
 <td class="left">The KDF supports an empty IV (feedback mode).</td>
 <td class="left">boolean</td>
