Fix revision in table.  Fixes #751

--- a/artifacts/acvp_sub_kas_ifc.html
+++ b/artifacts/acvp_sub_kas_ifc.html
@@ -717,7 +717,7 @@
 <td class="left">revision</td>
 <td class="left">The algorithm testing revision to use.</td>
 <td class="left">value</td>
-<td class="left">"1.0"</td>
+<td class="left">"Sp800-56Br2"</td>
 <td class="left">No</td>
 </tr>
 <tr>
