--- a/artifacts/acvp_sub_kas_ecc_Sp800-56Ar3.html
+++ b/artifacts/acvp_sub_kas_ecc_Sp800-56Ar3.html
@@ -765,8 +765,8 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">scheme</td>
-<td class="left">Array of IUT supported domain parameters.</td>
+<td class="left">domainParameterGenerationMethods</td>
+<td class="left">Array of IUT supported domain parameter generation methods.</td>
 <td class="left">array</td>
 <td class="left">P-192, P-224, P-256, P-384, P-521, K-163, K-233, K-283, K-409, K-571, B-163, B-233, B-283, B-409, B-571 </td>
 <td class="left">No</td>
