Typo in description of Y value of public keys

--- a/artifacts/acvp_sub_kas_ecc_Sp800-56Ar3.html
+++ b/artifacts/acvp_sub_kas_ecc_Sp800-56Ar3.html
@@ -3739,7 +3739,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPublicKeyIutY</td>
-<td class="left">The IUT's ephemeral public key X value.</td>
+<td class="left">The IUT's ephemeral public key Y value.</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -3763,7 +3763,7 @@
 </tr>
 <tr>
 <td class="left">staticPublicKeyIutY</td>
-<td class="left">The IUT's static public key X value.</td>
+<td class="left">The IUT's static public key Y value.</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -3787,7 +3787,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPublicKeyServerY</td>
-<td class="left">The Server's ephemeral public key X value.</td>
+<td class="left">The Server's ephemeral public key Y value.</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -3811,7 +3811,7 @@
 </tr>
 <tr>
 <td class="left">staticPublicKeyServerY</td>
-<td class="left">The Server's static public key X value.</td>
+<td class="left">The Server's static public key Y value.</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
