--- a/artifacts/acvp_sub_kas_ifc.html
+++ b/artifacts/acvp_sub_kas_ifc.html
@@ -417,7 +417,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Hammett, R., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkasifc-1.0" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkasifc-sp800-56br2" />
   <meta name="dct.issued" scheme="ISO8601" content="2019-10-01" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using KAS IFC algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using KAS IFC algorithms with the ACVP specification." />
@@ -451,7 +451,7 @@
   </table>
 
   <p class="title">ACVP KAS IFC JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subkasifc-1.0</span></p>
+  <span class="filename">draft-ietf-acvp-subkasifc-sp800-56br2</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document defines the JSON schema for using KAS IFC algorithms with the ACVP specification.</p>
