KAS Correct property name "macModes" -> "macMode" - closes #793

--- a/artifacts/acvp_sub_kas_ifc.html
+++ b/artifacts/acvp_sub_kas_ifc.html
@@ -1338,8 +1338,8 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">macModes</td>
-<td class="left">The macModes supported by the KDF.</td>
+<td class="left">macMode</td>
+<td class="left">The macMode supported by the KDF.</td>
 <td class="left">array of string</td>
 <td class="left">CMAC-AES128, CMAC-AES192, CMAC-AES256, HMAC-SHA-1, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512</td>
 <td class="left">No</td>
