--- a/artifacts/acvp_sub_kas_ffc_Sp800-56Ar3.html
+++ b/artifacts/acvp_sub_kas_ffc_Sp800-56Ar3.html
@@ -413,7 +413,7 @@
 
   <meta name="dct.creator" content="Hammett, R., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subkasffc-sp800-56ar3" />
-  <meta name="dct.issued" scheme="ISO8601" content="2020-01-10" />
+  <meta name="dct.issued" scheme="ISO8601" content="2020-01-01" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using KAS FFC algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using KAS FFC algorithms with the ACVP specification." />
 
@@ -434,10 +434,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Informational</td>
-<td class="right">January 10, 2020</td>
+<td class="right">January 1, 2020</td>
 </tr>
 <tr>
-<td class="left">Expires: July 13, 2020</td>
+<td class="left">Expires: July 4, 2020</td>
 <td class="right"></td>
 </tr>
 
@@ -454,7 +454,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at https://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on July 13, 2020.</p>
+<p>This Internet-Draft will expire on July 4, 2020.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2020 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (https://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -1142,8 +1142,8 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">macModes</td>
-<td class="left">The macModes supported by the KDF.</td>
+<td class="left">macMode</td>
+<td class="left">The macMode supported by the KDF.</td>
 <td class="left">array of string</td>
 <td class="left">CMAC-AES128, CMAC-AES192, CMAC-AES256, HMAC-SHA-1, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512</td>
 <td class="left">No</td>
