--- a/artifacts/acvp_sub_kas_ecc_Sp800-56Ar3.html
+++ b/artifacts/acvp_sub_kas_ecc_Sp800-56Ar3.html
@@ -381,7 +381,7 @@
 <link href="#rfc.section.2.1.1" rel="Chapter" title="2.1.1 KAS-ECC Requirements Covered">
 <link href="#rfc.section.2.1.2" rel="Chapter" title="2.1.2 KAS-ECC Requirements Not Covered">
 <link href="#rfc.section.3" rel="Chapter" title="3 Capabilities Registration">
-<link href="#rfc.section.3.1" rel="Chapter" title="3.1 Required Prerequisite Algorithms for KAS ECC Validations">
+<link href="#rfc.section.3.1" rel="Chapter" title="3.1 Prerequisite Algorithms for KAS ECC Validations">
 <link href="#rfc.section.3.2" rel="Chapter" title="3.2 KAS ECC Algorithm Capabilities JSON Values">
 <link href="#rfc.section.3.3" rel="Chapter" title="3.3 Supported KAS ECC Functions">
 <link href="#rfc.section.3.4" rel="Chapter" title="3.4 KAS ECC Schemes">
@@ -478,7 +478,7 @@
 </li>
 </ul></ul><li>3.   <a href="#rfc.section.3">Capabilities Registration</a>
 </li>
-<ul><li>3.1.   <a href="#rfc.section.3.1">Required Prerequisite Algorithms for KAS ECC Validations</a>
+<ul><li>3.1.   <a href="#rfc.section.3.1">Prerequisite Algorithms for KAS ECC Validations</a>
 </li>
 <li>3.2.   <a href="#rfc.section.3.2">KAS ECC Algorithm Capabilities JSON Values</a>
 </li>
@@ -605,13 +605,13 @@
 <p id="rfc.section.3.p.1">ACVP REQUIRES crypto modules to register their capabilities. This allows the crypto module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process. This section describes the constructs for advertising support of KAS ECC algorithms to the ACVP server.</p>
 <p id="rfc.section.3.p.2">The algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message. The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section. The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message. See the ACVP specification for details on the registration message. Each KDF algorithm capability advertised is a self-contained JSON object.</p>
 <h1 id="rfc.section.3.1">
-<a href="#rfc.section.3.1">3.1.</a> <a href="#prereq_algs" id="prereq_algs">Required Prerequisite Algorithms for KAS ECC Validations</a>
+<a href="#rfc.section.3.1">3.1.</a> <a href="#prereq_algs" id="prereq_algs">Prerequisite Algorithms for KAS ECC Validations</a>
 </h1>
 <p id="rfc.section.3.1.p.1">Some algorithm implementations rely on other cryptographic primitives. For example, IKEv2 uses an underlying SHA algorithm. Each of these underlying algorithm primitives must be validated, either separately or as part of the same submission. ACVP provides a mechanism for specifying the required prerequisites:</p>
 <div id="rfc.table.1"></div>
 <div id="rereqs_table"></div>
 <table cellpadding="3" cellspacing="0" class="tt full center">
-<caption>Required Prerequisite Algorithms JSON Values</caption>
+<caption>Prerequisite Algorithms JSON Values</caption>
 <thead><tr>
 <th class="left">JSON Value</th>
 <th class="left">Description</th>
@@ -624,7 +624,7 @@
 <td class="left">algorithm</td>
 <td class="left">a prerequisite algorithm</td>
 <td class="left">value</td>
-<td class="left">CMAC, DRBG, ECDSA, HMAC, SHA, KMAC</td>
+<td class="left">CMAC, DRBG, ECDSA, HMAC, KMAC, SHA, SP800-108</td>
 <td class="left">No</td>
 </tr>
 <tr>
