Fix keylens for AES-XPN, adjust "within domain" to 96 bits for IV len in one table - closes #791

--- a/artifacts/draft-celi-acvp-block-ciph-00.html
+++ b/artifacts/draft-celi-acvp-block-ciph-00.html
@@ -1597,7 +1597,7 @@ For i = 0 to 399
 <td class="left">AES-XPN</td>
 <td class="left">"1.0"</td>
 <td class="left">["encrypt", "decrypt"]</td>
-<td class="left">[128, 192, 256]</td>
+<td class="left">[128, 256]</td>
 <td class="left">{"Min": 8, "Max": 65536, "Inc": 8}</td>
 <td class="left"></td>
 <td class="left">["internal", "external"]</td>
@@ -2068,11 +2068,11 @@ For i = 0 to 399
 </tr>
 <tr>
 <td class="left">AES-XPN</td>
-<td class="left">128, 192, 256</td>
+<td class="left">128, 256</td>
 <td class="left">"internal", "external"</td>
 <td class="left">"8.2.1", "8.2.2"</td>
 <td class="left">"internal", "external"</td>
-<td class="left">within domain</td>
+<td class="left">96</td>
 <td class="left">within domain</td>
 <td class="left">within domain</td>
 <td class="left">within domain</td>
@@ -2701,7 +2701,6 @@ POST [
         "saltGen": "internal",      
         "keyLen": [
             128,
-            192,
             256
         ],
         "tagLen": [
