KAS spec updates - Updates fixedInfoPatternConstruction sample to contain even number of literals - closes #814

--- a/artifacts/acvp_sub_kas_ifc.html
+++ b/artifacts/acvp_sub_kas_ifc.html
@@ -1053,7 +1053,7 @@
 </tr></thead>
 <tbody>
 <tr>
-<td class="left">Modulo</td>
+<td class="left">modulo</td>
 <td class="left">The modulo the IUT supports.</td>
 <td class="left">array of integers</td>
 <td class="left">2048, 3072, 4096, 5120, 6144, 7168, 8192</td>
@@ -1067,7 +1067,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">FixedPublicExponent</td>
+<td class="left">fixedPubExp</td>
 <td class="left">The fixed public exponent in use for the KeyGenerationMethod.</td>
 <td class="left">hex</td>
 <td class="left">Odd number, gt 2^16, lt 2^256.</td>
@@ -1506,7 +1506,7 @@
 <p></p>
 
 <ul>
-<li>literal[123456789ABCDEF] <ul><li>uses the specified hex within "[]". literal[123456789ABCDEF] substitutes "123456789ABCDEF" in place of the field</li></ul>
+<li>literal[0123456789ABCDEF] <ul><li>uses the specified hex within "[]". literal[0123456789ABCDEF] substitutes "0123456789ABCDEF" in place of the field</li></ul>
 <p> </p>
 </li>
 <li>uPartyInfo <ul><li>uPartyId { || dkmNonce } { || c } </li></ul>
@@ -1818,7 +1818,7 @@
     "function": ["keyPairGen", "partialVal"],
     "iutId": "CAFECAFE",
     "scheme": {
-        "kas1-Party_V-confirmation": {
+        "KAS1-Party_V-confirmation": {
             "kasRole": [
                 "initiator",
                 "responder"
